--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.0",
     "bootswatch": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
@@ -15,7 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.26.5"
   },
   "scripts": {
     "start": "react-scripts start",
